--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.5",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "swiper": "^6.6.2",
     "web-vitals": "^1.0.1"
   },
