--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@react-pdf/renderer": "2.1.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.11.4",
     "@react-pdf/font": "2.2.0",
+    "@react-pdf/renderer": "2.1.0",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -20,18 +25,21 @@
     "firebase": "^8.10.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-calendar": "^3.3.1",
     "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.5",
     "react-icons": "^4.6.0",
+    "react-image-crop": "^10.0.9",
     "react-loading": "^2.0.3",
     "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinner-animated": "^3.1.1",
     "react-toastify": "^7.0.4",
+    "scss-react": "^1.1.1",
     "swiper": "^6.6.2",
     "web-vitals": "^1.0.1"
   },
@@ -60,7 +68,8 @@
     ]
   },
   "devDependencies": {
-    "faker": "5.5.3"
+    "faker": "5.5.3",
+    "sass": "^1.58.1"
   },
   "resolutions": {
     "@react-pdf/font": "2.2.0"
